--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -95,5 +95,16 @@ body {
   cursor: pointer;
 }
 
+.sticky {
+  top: 0;
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.5s ease; /* Adjust the transition duration and easing function as needed */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Adjust the shadow as needed */
+  /* Add any other styles for the sticky Navbar */
+}
 
+.sticky.visible {
+  opacity: 1;
+}
 
